feat: shell script 작성